Link Pseudoname and review assignment and change request